--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <div class="navbar">
     <h1 id="site_name">Conflip Site</h1>
 <div class="navbar-right">
+    <div class="withdraw">
+        <p>WITHDRAW</p>
+    </div>
+    <div class="deposit">
+        <button>DEPOSIT</button>
+    </div>
     <div class="inventory">
         <img src="assets/inventory.png" id="chest">
         <img src="assets/dropdown.png" id="arrow">
         <div class="inventory-box"></div>
     </div>
-    <div class="deposit">
-        <button>DEPOSIT</button>
-    </div>
     <div class="sign-in">
         <img src="assets/steam-logo.png">
-        <p>Sign In</p>
+        <p>SIGN IN</p>
     </div>
 </div>
 </div>
