--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-        <title>jack2256 Coinflip</title>
+        <title>csgo-flip.com | Coin Flip</title>
     </head>
 
     <body>
 
 <div class="navbar">
-    <h1 id="site_name">Conflip Site</h1>
+    <img src="assets/logo.png" id="logo">
 <div class="navbar-right">
     <div class="withdraw" onclick="create()">
         <p>WITHDRAW</p>
