--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
 
     <body>
-<div id="inventory-box">
+<!--<div id="inventory-box">
     <h1>INVENTORY</h1>
-</div>
+</div>-->
 <div class="navbar">
     <img src="assets/logo.png" id="logo">
 <div class="navbar-right">
@@ -21,7 +21,7 @@
     <div class="deposit">
         <button>DEPOSIT</button>
     </div>
-    <div class="inventory" onclick="document.getElementById('inventory-box').style.zIndex = '10'">
+    <div class="inventory">
         <img src="assets/inventory.png" id="chest">
         <img src="assets/dropdown.png" id="arrow">
     </div>
