--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body onload="hideShow()">
 <div id="inventory-box">
     <h1>INVENTORY</h1>
+    <p>Total Value: $999</p>
 </div>
 <div class="navbar">
     <img src="assets/logo.png" id="logo">
