--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
         <title>csgo-flip.com | Coin Flip</title>
     </head>
 
